src/test/resources/errors/indexOutOfBounds.intp
val array = []
val x = array[99]